# nexo-os

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  Makefile  OPERATING-MODEL.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  deploy.yml
docs/: BIGQUERY_CUTOVER.md  DEPLOYMENT.md  DEPLOY_STREAMLIT.md  ENTERPRISE.md  EVIDENCE.md  INCIDENT_RESPONSE.md  OBSERVABILITY.md  PRODUCTION_EVIDENCE.md  SECURITY_REVIEW.md  SOC2_CONTROLS.md  TURSO.md
nexo_os/: __init__.py  __main__.py  analysis.py  audit.py  cli.py  clock.py  config.py  grounding.py  i18n.py  logging_setup.py  narrate.py  orchestrator.py  reliability.py  review.py  rng.py  state.py
nexo_os/agents/: __init__.py  base.py  specialists.py
nexo_os/core/: __init__.py  aging.py  cartera.py  cobranza.py  comisiones.py  conversion.py  leads_control.py  money.py  morosidad.py  pipeline.py  profitability.py  renewals.py  results.py  retention.py
nexo_os/dashboard/: __init__.py  app.py  bootstrap.py  portfolio.py
nexo_os/data/: __init__.py  bigquery.py  bq_validate.py  composite.py  factory.py  gcs.py  generate.py  ground_truth.py  models.py  repository.py  schema_def.py  synthetic.py  turso.py  turso_seed.py
nexo_os/enterprise/: __init__.py  controls.py  data_contracts.py  iam.py  incident.py  observability.py  rbac.py  release.py  secrets.py  security_review.py  sso.py
nexo_os/evals/: __init__.py  runner.py
nexo_os/security/: __init__.py  execution.py  pii.py  users.py
nexo_os/tests/: conftest.py  factories.py  test_agents_detection.py  test_analysis.py  test_composite_hybrid.py  test_core_golden.py  test_core_units.py  test_dashboard_import.py  test_demo_bootstrap.py  test_enterprise.py  test_evals.py  test_factory_and_bq.py  test_gcs_and_tenancy.py  test_generate_ground_truth.py  test_governance.py  test_narrate_grounding.py  test_orchestrator.py  test_phase0_scaffold.py  test_repository_synthetic.py  (+3 more)
scripts/: render_data_model.py  render_ddl.py  run_datasets.py
(+5 files in other folders)
